Unfortunetly, there was a padding error on small screen so here is the fix for horizontal scrolling

--- a/app/assets/stylesheets/pages/dashboard.css.scss
+++ b/app/assets/stylesheets/pages/dashboard.css.scss
@@ -58,7 +58,7 @@
 
     h1 {
       font-size: 1.5em;
-      padding-top: 8px;
+      padding-top: 0.25em;
       margin: 0px;
     }
   }
